mega formatting commit also corrected some warnings